fix z-index levels

--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -62,7 +62,7 @@ body {
 
   .inner {
     position: relative;
-    z-index: 0;
+    z-index: 1;
     margin: 0;
     display: inline-block;
     vertical-align: middle;
