--- a/src/TopMenu/TopMenu.scss
+++ b/src/TopMenu/TopMenu.scss
@@ -6,9 +6,7 @@
   width: 100%;
   text-align: center;
   padding: 1.5em 0 1.5em 0;
-  z-index: 1;
-
-
+  z-index: 2;
 
   > ul {
     line-height: 0px;
@@ -73,7 +71,7 @@
         margin-top: 0px;
         padding-top: 16px;
         transition: opacity 0.34s ease-in-out;
-    
+        
         & > * {
           margin-top: 6px;
           margin-bottom: 6px;
